@@ -1,6 +1,6 @@
-package com.company.app.wildberries_desire_lot.domain.util;
+package com.company.app.wildberries_desire_lot.domain.mapper;
 
-import com.company.app.wildberries_desire_lot.component.desire_lot.util.WBUtils;
+import com.company.app.wildberries_desire_lot.component.util.WBUtils;
 import com.company.app.wildberries_desire_lot.domain.dto.FoundItemDto;
 import com.company.app.wildberries_desire_lot.domain.entity.FoundItem;
 import lombok.experimental.UtilityClass;
@@ -10,7 +10,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @UtilityClass
-public class FoundItemUtil {
+public class FoundItemMapper {
 
     public static FoundItemDto of(FoundItem foundItem) {
         FoundItemDto foundItemDto = new FoundItemDto();
@@ -20,9 +20,10 @@ public class FoundItemUtil {
 
     public static List<FoundItemDto> of(List<FoundItem> foundItems) {
         List<FoundItemDto> result = foundItems.stream()
-                .map(FoundItemUtil::of)
-                .collect(Collectors.toList());
+                .map(FoundItemMapper::of)
+                .toList();
         result.forEach(foundItemDto -> foundItemDto.setLink(WBUtils.getUrlForResponse(foundItemDto.getArticle())));
         return result;
     }
+
 }
